# plan-agent

./: .dockerignore  .env.example  .gitignore  README.md
apps/agent-orchestrator/: .dockerignore  .env.example  .gcloudignore  BACKEND_GUIDE.md  BACKLOG.md  Dockerfile  FRONTEND_TODO.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OPENROUTER_GUIDE.md  QUICKSTART.md  README.md  examples.py  pyproject.toml  test_db.py  test_db2.py  test_db3.py  test_db4.py  test_db5.py  test_workflow.py  validate_openrouter.sh
apps/agent-orchestrator/app/: main.py
apps/agent-orchestrator/app/agent/: agents.py  factory.py  state.py  workflow.py
apps/agent-orchestrator/app/api/: analytics_routes.py  deps.py  routes.py
apps/agent-orchestrator/app/config/: __init__.py  llm_config.py  settings.py
apps/agent-orchestrator/app/core/: db.py  quota.py  security.py
apps/agent-orchestrator/app/services/: supabase_service.py  title_service.py
apps/agent-orchestrator/app/tools/: base.py  server_tools.py
apps/agent-orchestrator/app/utils/: formatters.py  helpers.py  time.py
apps/agent-orchestrator/scratch/: check_db.py  test_agent_ui.py  test_db_persistence.py  test_fallback.py  test_resume_logic.py  verify_analytics.py  verify_supabase.py
apps/agent-orchestrator/scripts/: deploy.sh  test_agent.py  test_workflow_mock.py
apps/agent-prototype-baml/: .env.example  Dockerfile  README.md  chainlit_app.py  docker-compose.yml  pyproject.toml  repro_issue.py  requirments.txt  walkthrough.md.resolved
apps/agent-prototype-baml/app/: main.py
apps/agent-prototype-baml/app/api/: routes.py  subscriptions.py
apps/agent-prototype-baml/app/config/: settings.py
apps/agent-prototype-baml/app/core/: __init__.py  auth.py  auth_client.py  config.py  http_client.py  jwt.py  logging.py  schemas.py  supabase_auth.py  supabase_client.py  utils.py
apps/agent-prototype-baml/app/models/: requests.py
apps/agent-prototype-baml/app/schemas/: base.py  event.py  plan.py  task.py
apps/agent-prototype-baml/app/services/: calendar.py  context_engine.py  embedding_service.py  event_service.py  legacy_plan_service.py  limit_service.py  schema_service.py  task_service.py
apps/agent-prototype-baml/app/tools/: seed_db.py  sqlite_tool.py  test_stream_hierarchical.py  test_workflow.py
apps/agent-prototype-baml/app/utils/: baml_filter_mapper.py
apps/agent-prototype-baml/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
apps/agent-prototype-baml/baml_src/: clients.baml
apps/agent-prototype-baml/baml_src/quanlity_control/: qc.baml
apps/agent-prototype-baml/scripts/: run_qc_eval.py  test_tools_direct.py
apps/agent-prototype-baml/static/: chat.html
infra/: docker-compose.yml
(+256 files in other folders)
