[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "LLM powered planning engine for the Planning Agent stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Configuration & Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.2.1",
    # LLM & AI
    "langgraph>=0.2.28",
    "langchain>=0.3.0",
    "langchain-core>=0.3.14",
    "langchain-openai>=0.1.0",
    "langchain-openrouter",
    "langchain-google-genai>=0.1.0",
    "google-genai>=1.56.0",
    # Utilities
    "tenacity>=9.0.0",
    "loguru>=0.7.3",
    # Database & Storage
    "supabase>=2.3.0",
    # Auth & Security
    "python-jose>=3.3.0",
    "google-auth>=2.30.0",
    "google-api-python-client>=2.130.0",
    # Optional UIs
    "chainlit>=2.10.0",
    "streamlit>=1.52.2",
    # Monitoring
    "watchdog>=6.0.0",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary]>=3.3.3",
    "slowapi>=0.1.9",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
