[project]
name = "agent-prototype-baml"
version = "0.1.0"
description = "LLM powered planning engine for the Planning Agent stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "tenacity>=9.0.0",
    "langgraph>=0.2.28",
    "langchain-core>=0.3.14",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "baml-py==0.220.0",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
    "google-genai>=1.56.0",
    "python-jose>=3.3.0",
    "supabase>=2.3.0",
    "chainlit>=2.10.0",
    "google-auth>=2.30.0",
    "google-api-python-client>=2.130.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
